--- a/k0sctl.yaml
+++ b/k0sctl.yaml
@@ -8,21 +8,21 @@ spec:
       address: 10.1.1.31
       user: pchq
       port: 22
-      keyPath: /Users/wings/.ssh/id_ed25519
+      keyPath: ~/.ssh/id_ed25519
     role: controller+worker
     noTaints: true
   - ssh:
       address: 10.1.1.32
       user: pchq
       port: 22
-      keyPath: /Users/wings/.ssh/id_ed25519
+      keyPath: ~/.ssh/id_ed25519
     role: controller+worker
     noTaints: true
   - ssh:
       address: 10.1.1.33
       user: pchq
       port: 22
-      keyPath: /Users/wings/.ssh/id_ed25519
+      keyPath: ~/.ssh/id_ed25519
     role: controller+worker
     noTaints: true
   k0s:
