--- a/templates/Template/debian12.yaml
+++ b/templates/Template/debian12.yaml
@@ -52,6 +52,7 @@ spec:
               MODE: 0600
               DIRMODE: 0700
               CONTENTS: |
+                datasource_list: [Ec2]
                 datasource:
                   Ec2:
                     # Hegel IP
