--- a/templates/Template/debian12.yaml
+++ b/templates/Template/debian12.yaml
@@ -95,10 +95,8 @@ spec:
               DIRMODE: 0700
               CONTENTS: |
                 datasource: Ec2
-          - name: "kexec-debian"
-            image: quay.io/tinkerbell-actions/kexec:v1.0.0
+          - name: "reboot"
+            image: public.ecr.aws/l0g8r8j6/tinkerbell/hub/reboot-action:latest
             timeout: 90
-            pid: host
-            environment:
-              BLOCK_DEVICE: /dev/sda1
-              FS_TYPE: ext4
+            volumes:
+            - /worker:/worker
