--- a/templates/Template/debian12.yaml
+++ b/templates/Template/debian12.yaml
@@ -58,6 +58,9 @@ spec:
                     # Hegel IP
                     metadata_urls: ["http://10.1.1.24:50061"]
                     strict_id: false
+                    apply_full_imds_network_config: false
+                    max_wait: 30
+                    timeout: 10
                 system_info:
                   default_user:
                     name: pchq
