--- a/templates/Workflow/haproxy02.yaml
+++ b/templates/Workflow/haproxy02.yaml
@@ -1,10 +1,10 @@
 apiVersion: "tinkerbell.org/v1alpha1"
 kind: Workflow
 metadata:
-  name: wf-prod-haproxy02
+  name: wf-haproxy02
   namespace: tink-system
 spec:
-  templateRef: debian12
-  hardwareRef: prod-haproxy02
+  templateRef: 
+  hardwareRef: haproxy02
   hardwareMap:
     device_1: 06:68:03:b7:06:e5
