this is really silly

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tinkerbell-charts"]
 	path = tinkerbell-charts
 	url = https://github.com/riffcc/tinkerbell-charts
+[submodule "playbooks/haproxy-cluster-playbook"]
+	path = playbooks/haproxy-cluster-playbook
+	url = https://github.com/riffcc/haproxy-cluster-playbook.git
