--- a/k0sctl.yaml
+++ b/k0sctl.yaml
@@ -6,21 +6,21 @@ spec:
   hosts:
   - ssh:
       address: 10.1.1.31
-      user: pchq
+      user: riff
       port: 22
       keyPath: ~/.ssh/id_ed25519
     role: controller+worker
     noTaints: true
   - ssh:
       address: 10.1.1.32
-      user: pchq
+      user: riff
       port: 22
       keyPath: ~/.ssh/id_ed25519
     role: controller+worker
     noTaints: true
   - ssh:
       address: 10.1.1.33
-      user: pchq
+      user: riff
       port: 22
       keyPath: ~/.ssh/id_ed25519
     role: controller+worker
@@ -33,7 +33,7 @@ spec:
         network:
           provider: calico
         api:
-          externalAddress: 10.1.1.11
+          externalAddress: 10.1.1.101
           sans:
           - 10.1.1.11
           - 10.1.1.12
