--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -1,3 +1,6 @@
 [galaxy]
 ignore_certs=False
-server=https://galaxy.ansible.com/
+server_list = server0
+
+[galaxy_server.server0]
+url=https://galaxy.ansible.com
