--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,5 @@
 [galaxy]
-ignore_certs=False
-server_list = server0
+server_list = release_galaxy
 
-[galaxy_server.server0]
-url=https://galaxy.ansible.com
+[galaxy_server.release_galaxy]
+url=https://galaxy.ansible.com/api/
