Add various roles

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,2 @@
 [galaxy]
-server_list = release_galaxy
-
-[galaxy_server.release_galaxy]
-url=https://galaxy.ansible.com/api/
+server = https://old-galaxy.ansible.com/
