--- a/playbooks/base-playbook/deploy.yml
+++ b/playbooks/base-playbook/deploy.yml
@@ -5,11 +5,12 @@
 
   roles:
     - dns
-    # - ntp
+    - root-user
+    - riff-user
+    - geerlingguy.ntp
+    - sshd
     # - sssd-ldap
     # - moosefs-mount
-    # - root-user
-    # - riff-user
     # - sshd
     # - sudo
     # - utils
