--- a/playbooks/base-playbook/roles/dns/tasks/main.yml
+++ b/playbooks/base-playbook/roles/dns/tasks/main.yml
@@ -9,7 +9,9 @@
     path: /etc/systemd/resolved.conf
     section: Resolve
     option: DNS
-    values: "{{ dns_servers }}"
-    mode: '0600'
+    values: "{{ dns_servers | join(' ') }}"
+    mode: '0644'
+    owner: root
+    group: root
     state: present
   notify: Restart systemd-resolved
