--- a/inventories/netbox-inventory/netbox_inventory.yml
+++ b/inventories/netbox-inventory/netbox_inventory.yml
@@ -4,7 +4,6 @@ config_context: False
 group_by:
   - device_roles
 query_filters:
-  - role: "Server"
-  - role: "Virtual Server"
+  - role: "server"
 device_query_filters:
   - has_primary_ip: 'true'
