--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,4 +2,4 @@
 server = https://old-galaxy.ansible.com/
 
 [inventory]
-enable_plugins = netbox.netbox.nb_inventory
+enable_plugins = netbox.netbox.nb_inventory, yaml, ini
