--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,4 +2,4 @@
 server = https://old-galaxy.ansible.com/
 
 [inventory]
-enable_plugins = auto, netbox.netbox.nb_inventory, yaml, ini, json
+enable_plugins = host_list, script, auto, yaml, ini, toml, netbox.netbox.nb_inventory
