--- a/ansible-execution-environments/execution-environment.yml
+++ b/ansible-execution-environments/execution-environment.yml
@@ -2,3 +2,9 @@
 version: 3
 dependencies:
   galaxy: requirements.yml
+additional_build_files:
+    - src: ansible.cfg
+      dest: configs
+additional_build_steps:
+  prepend_galaxy:
+    - COPY _build/configs/ansible.cfg /etc/ansible/ansible.cfg
