--- a/playbooks/base-playbook/deploy.yml
+++ b/playbooks/base-playbook/deploy.yml
@@ -7,7 +7,8 @@
     - dns
     - root-user
     - riff-user
-    - geerlingguy.ntp
+    # - geerlingguy.ntp
+    - mrlesmithjr.chrony
     - sshd
     # - sssd-ldap
     # - moosefs-mount
