--- a/playbooks/base-playbook/roles/dns/tasks/main.yml
+++ b/playbooks/base-playbook/roles/dns/tasks/main.yml
@@ -3,6 +3,7 @@
   package:
     name: systemd-resolved
     state: present
+  when: ansible_os_family == "Debian"
 
 - name: Ensure systemd-resolved is configured with the local DNS servers
   community.general.ini_file:
